--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -15,6 +15,19 @@
     cursor: pointer;
 }
 
+.copyright {
+    color: white;
+    display: flex;
+    justify-content: center;
+    
+}
+.copyright p{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1px;
+}
  .cv-container {
     background: white;
     height: auto;
