--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -40,8 +40,8 @@
 
 .cv-header {
  color: white;
- background: purple;
- padding: 50px 5px;
+ background: black;
+ padding: 50px 50px;
 }
 .designation {
     margin-left: 50px;
@@ -54,7 +54,7 @@
 .cv-body {
     background: white;
     color: black;
-    padding: 0px 60px;
+    padding: 0px 150px;
     margin-top: 60px;
     padding-bottom: 30px;
 }
@@ -64,7 +64,7 @@ hr {
 .first-paragraph, 
 .second-paragraph,
  .third-paragraph {
-    color: purple;
+    color: black;
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
@@ -88,7 +88,29 @@ h5 {
 h4 {
     margin-bottom: 10px;
     margin-top: 10px;
-    color:  black;
+    font-size: large;
+}
+.cv-body h4 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color:  blue;
+    font-weight:bolder;
+    font-size: large;
+}
+.cv-body h3 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    color:  red;
+    font-weight:bolder;
+    font-size: large;
+}
+.cv-body h4 span {
+    color: blue
+}
+
+
+.progress {
+    color: white;
 }
 
 .icon {
@@ -108,7 +130,7 @@ h4 {
    width: 200px;
    height: 200px;
    position: absolute;
-   right: 40px;
+   right: 100px;
    top: 100px;
    border-radius: 50%
 }
@@ -122,15 +144,32 @@ h4 {
     .cv-header > .image {
         width: 100px;
         height: 100px;
+        right: 40px;
         top: 25%;
      }
+     .cv-body {
+        
+        padding: 0px 50px;
+        
+    }
+    .cv-header {
+        color: white;
+        background: black;
+        padding: 50px 20px;
+       }
 }
-@media screen and (max-width: 375px){
+@media screen and (min-width: 375px){
     .designation {
         margin-left: 30px;
         
     
     }
+    .cv-header > .image {
+        width: 100px;
+        height: 100px;
+        right: 40px;
+        top: 20%;
+     }
     
     
     .cv-body {
